infra/k8s/core-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: school/core:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: core-srv
spec:
  selector:
    app: core
  ports:
    - name: core
      protocol: TCP
      port: 5000
      targetPort: 5000
