infra/k8s/template-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: template
  template:
    metadata:
      labels:
        app: template
    spec:
      containers:
        - name: template
          image: school/template:0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: template-srv
spec:
  selector:
    app: template
  ports:
    - name: template
      protocol: TCP
      port: 3000
      targetPort: 3000
