infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: school.dev
      http:
        paths:
          - path: /core
            backend:
              serviceName: core-srv
              servicePort: 5000
          - path: /temp
            backend:
              serviceName: template-srv
              servicePort: 3000
          - path: /
            backend:
              serviceName: client-srv
              servicePort: 8080
